Compute alive worker metrics in `WorkerService#updateMetrics` scheduled job
These metrics are then used in `MetricService#getPlatformMetrics` to build responses
to queries on `/metrics` endpoint. Those queries no more trigger reads on MongoDB.